--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,34 @@
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-slate-50 font-sans;
+}
+
+button {
+    @apply border-none;
+}
+
+a {
+    color: inherit;
+}
+
+.talipaapp-input-1,
+.talipaapp-input-1 input {
+  @apply bg-[#C2CFA0] text-sm text-[#424b27] placeholder:text-[#606C38];
+  accent-color: #424b27;
+}
+
+.talipaapp-input-1,
+.talipaapp-input-1.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled) {
+  @apply hover:border-[#606C38] focus:border-[#606C38] focus:shadow-sm;
+}
+.talipaapp-input-1.ant-input-affix-wrapper-focused {
+  @apply border-[#606C38] shadow-sm;
+}
+
+.talipaapp-button-1 {
+  @apply block bg-[#606C38] py-2.5 px-4 rounded text-white text-center;
+}
