--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,3 +32,12 @@ a {
 .talipaapp-button-1 {
   @apply block bg-[#606C38] py-2.5 px-4 rounded text-white text-center;
 }
+
+.talipaapp-scrollbar {
+  scrollbar-color: rgb(179, 179, 179) #f1f1f1; /* thumb and track color */
+  scrollbar-width: thin;
+}
+
+.talipaapp-scrollbar::-webkit-scrollbar { width: 5px; }
+.talipaapp-scrollbar::-webkit-scrollbar-track { background-color: #f1f1f1; }
+.talipaapp-scrollbar::-webkit-scrollbar-thumb { background-color: rgb(179, 179, 179); }
