--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,18 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap");
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  @apply bg-slate-50 font-sans;
-}
-
-button {
-    @apply border-none cursor-pointer;
-}
-
-a {
-    color: inherit;
+  @apply bg-slate-100 font-sans text-slate-700;
 }
 
 .talipaapp-input-1,
@@ -41,3 +31,4 @@ a {
 .talipaapp-scrollbar::-webkit-scrollbar { width: 5px; }
 .talipaapp-scrollbar::-webkit-scrollbar-track { background-color: #f1f1f1; }
 .talipaapp-scrollbar::-webkit-scrollbar-thumb { background-color: rgb(179, 179, 179); }
+
