--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -59,3 +59,7 @@ a {
 .talipaapp-scrollbar::-webkit-scrollbar { width: 5px; }
 .talipaapp-scrollbar::-webkit-scrollbar-track { background-color: #f1f1f1; }
 .talipaapp-scrollbar::-webkit-scrollbar-thumb { background-color: rgb(179, 179, 179); }
+
+.app-size {
+  @apply min-h-screen max-w-md mx-auto;
+}
