--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,7 +18,7 @@
 
 
 body {
-  @apply bg-slate-100 font-sans text-slate-700;
+  @apply bg-slate-100 font-sans text-slate-700 overflow-x-hidden;
 }
 
 a {
