Set Quantity for Prouct that is straight pricing type

--- a/src/styles/preflight.css
+++ b/src/styles/preflight.css
@@ -5,4 +5,12 @@
   :root {
     --color-primary: 22 162 73;
   }
+
+  input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number'] {
+    -webkit-appearance: none;
+    margin: 0;
+    -moz-appearance: textfield !important;
+  }
 }
