--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -68,3 +68,38 @@ a {
 .app-size {
   @apply mx-auto min-h-screen max-w-md;
 }
+
+.animate-slide-in {
+  animation-name: slide-in;
+  animation-duration: 200ms;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+  opacity: 1;
+}
+
+.animate-slide-out {
+  @apply transition-opacity delay-[200ms];
+  animation-name: slide-out;
+  animation-duration: 200ms;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
