--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,17 +4,20 @@
 @tailwind utilities;
 
 @layer utilities {
-  @layer responsive {
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 
-    /* Hide scrollbar for IE, Edge and Firefox */
-    .no-scrollbar {
-      -ms-overflow-style: none; /* IE and Edge */
-      scrollbar-width: none; /* Firefox */
-    }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .max-h-screen {
+    max-height: 100vh;
+    max-height: 100dvh;
   }
 }
 
@@ -68,7 +71,9 @@ a {
 }
 
 .app-size {
-  @apply mx-auto min-h-screen max-w-md;
+  @apply mx-auto max-w-md;
+  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 .animate-slide-in,
@@ -122,3 +127,16 @@ a {
     transform: translateX(0);
   }
 }
+
+.chat-sent {
+  @apply mt-1 max-w-[300px] self-end rounded-3xl bg-blue-500 p-4 py-2 text-base text-white shadow-sm;
+}
+
+.chat-sent + .chat-sent {
+  @apply mt-[1px];
+}
+
+/* .conversations .chat-received:last-of-type .avatar,
+.chat-cre {
+  @apply h-8;
+} */
