--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,7 +1,39 @@
 @import "./preflight.css";
-@import "antd/dist/antd.variable.min.css";
+/* @import "antd/dist/antd.less"; */
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+
+  :root {
+    --color-primary: 22 162 73;
+  }
+
+  * {
+    min-height: 0;
+    min-width: 0;
+  }
+
+  html {
+    font-size: 15px;
+  }
+
+  body {
+    @apply overflow-x-hidden bg-slate-100 font-sans text-slate-700;
+  }
+
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"] {
+    -webkit-appearance: none;
+    margin: 0;
+    -moz-appearance: textfield !important;
+  }
+  
+  a {
+    @apply text-current;
+  }
+}
 
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
@@ -36,85 +68,80 @@
   }
 }
 
-body {
-  @apply overflow-x-hidden bg-slate-100 font-sans text-slate-700;
+@layer components {
+  .ant-rate-star:not(:last-child) {
+    margin-right: 2px;
+  }
+  
+  .anticon svg {
+    vertical-align: baseline;
+  }
+  
+  .talipaapp-input-1,
+  .talipaapp-input-1 input {
+    @apply bg-[#C2CFA0] text-sm text-[#424b27] placeholder:text-[#606C38];
+    accent-color: #424b27;
+  }
+  
+  .talipaapp-input-1,
+  .talipaapp-input-1.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled) {
+    @apply hover:border-[#606C38] focus:border-[#606C38] focus:shadow-sm;
+  }
+  .talipaapp-input-1.ant-input-affix-wrapper-focused {
+    @apply border-[#606C38] shadow-sm;
+  }
+  
+  .talipaapp-button-1 {
+    @apply block rounded bg-[#606C38] py-2.5 px-4 text-center text-white hover:bg-[#606C38]/90;
+  }
+  
+  .talipaapp-scrollbar {
+    scrollbar-color: rgb(179, 179, 179) #f1f1f1; /* thumb and track color */
+    scrollbar-width: thin;
+  }
+  
+  .talipaapp-scrollbar::-webkit-scrollbar {
+    width: 5px;
+  }
+  .talipaapp-scrollbar::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
+  .talipaapp-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgb(179, 179, 179);
+  }
+  
+  .app-size {
+    @apply mx-auto max-w-md;
+    min-height: 100vh;
+    min-height: 100dvh;
+  }
+  
+  .animate-slide-in,
+  .animate-slide-out,
+  .animate-slide-left,
+  .animate-slide-right {
+    animation-duration: 200ms;
+    animation-timing-function: ease-in;
+  }
+  
+  .animate-slide-in,
+  .animate-slide-right {
+    animation-name: slide-in;
+    opacity: 1;
+  }
+  
+  .animate-slide-out {
+    @apply transition-opacity delay-[200ms];
+    animation-name: slide-out;
+    animation-fill-mode: forwards;
+    opacity: 0;
+  }
+  
+  .animate-slide-left {
+    animation-name: slide-left;
+  }
 }
 
-a {
-  @apply text-current;
-}
-
-.ant-rate-star:not(:last-child) {
-  margin-right: 2px;
-}
-
-.anticon svg {
-  vertical-align: baseline;
-}
-
-.talipaapp-input-1,
-.talipaapp-input-1 input {
-  @apply bg-[#C2CFA0] text-sm text-[#424b27] placeholder:text-[#606C38];
-  accent-color: #424b27;
-}
-
-.talipaapp-input-1,
-.talipaapp-input-1.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled) {
-  @apply hover:border-[#606C38] focus:border-[#606C38] focus:shadow-sm;
-}
-.talipaapp-input-1.ant-input-affix-wrapper-focused {
-  @apply border-[#606C38] shadow-sm;
-}
-
-.talipaapp-button-1 {
-  @apply block rounded bg-[#606C38] py-2.5 px-4 text-center text-white hover:bg-[#606C38]/90;
-}
-
-.talipaapp-scrollbar {
-  scrollbar-color: rgb(179, 179, 179) #f1f1f1; /* thumb and track color */
-  scrollbar-width: thin;
-}
-
-.talipaapp-scrollbar::-webkit-scrollbar {
-  width: 5px;
-}
-.talipaapp-scrollbar::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
-}
-.talipaapp-scrollbar::-webkit-scrollbar-thumb {
-  background-color: rgb(179, 179, 179);
-}
-
-.app-size {
-  @apply mx-auto max-w-md;
-  min-height: 100vh;
-  min-height: 100dvh;
-}
-
-.animate-slide-in,
-.animate-slide-out,
-.animate-slide-left,
-.animate-slide-right {
-  animation-duration: 200ms;
-  animation-timing-function: ease-in;
-}
-
-.animate-slide-in,
-.animate-slide-right {
-  animation-name: slide-in;
-  opacity: 1;
-}
-
-.animate-slide-out {
-  @apply transition-opacity delay-[200ms];
-  animation-name: slide-out;
-  animation-fill-mode: forwards;
-  opacity: 0;
-}
-
-.animate-slide-left {
-  animation-name: slide-left;
-}
 
 @keyframes slide-in {
   from {
@@ -151,10 +178,6 @@ a {
   @apply mt-[1px];
 }
 
-/* .conversations .chat-received:last-of-type .avatar,
-.chat-cre {
-  @apply h-8;
-} */
 
 .ant-modal-body {
   @apply talipaapp-scrollbar;
