--- a/src/styles/preflight.css
+++ b/src/styles/preflight.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap");
+@tailwind base;
+
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap");
 
 @tailwind base;
 @layer base {
@@ -13,4 +16,4 @@
     margin: 0;
     -moz-appearance: textfield !important;
   }
-}
+} */
