--- a/src/styles/tw-utilities.css
+++ b/src/styles/tw-utilities.css
@@ -12,6 +12,11 @@
       scrollbar-width: none; /* Firefox */
     }
   
+    .h-screen {
+      height: 100vh;
+      height: 100dvh;
+    }
+
     .max-h-screen {
       max-height: 100vh;
       max-height: 100dvh;
