--- a/src/pages/admin/FAQ/response.css
+++ b/src/pages/admin/FAQ/response.css
@@ -1,4 +1,4 @@
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
   #response {
     font-size: 15px;
   }
@@ -43,4 +43,4 @@
   p {
     font-size: 12px;
   }
-}
+} */
